# main

./: CONTRIBUTING.md  EXPORT_AND_SANCTIONS_NOTICE.md  LICENSE  LICENSE.md  NO_WARRANTY_AND_DISCLAIMER.md  PATENT_COVENANT.md  README.md  RF_BOARD_AND_TILE_NOTICE.md  SAFETY_AND_REGULATORY_NOTICE.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md
Applications/NTSC_Decode/: ntsc.sh  ntsc_demod.cpp
Applications/NearField/: nearfield.c  test_phase_loopback.grc
Applications/SpatialRF/: csi_sweep2.c  psd_switchable.c
CLI/jtag/: jtag.c  max285x.c  max285x.h
Drivers/csi/: Makefile  fpga-csi.c  fpga-csi.dts  fpga_csi.h
Drivers/dsi/: Makefile  config.txt  fpga-dsi.c  fpga-dsi.dts
Firmware/arm_QEC/8_16_master_slave_0/: .project
Firmware/teensy/: fpga.ino  max2850.ino  max2851.ino  modem.ino  verify.ino
Firmware/teensy/matlab/: debug_capture_test.hex  plot_debug_capture_test.m  (+1 more)
GUI/: app.py
GUI/templates/: index.html  split.html
Hardware/: Readme.md
Hardware/OpenEMS/: QuadRF_Antenna.m
Hardware/QuadRF_Antenna/: AntennaMask.PcbLib  AntennaMask.SchLib  SMD_BD5.6-L5.6-W5.6-D3.6.PcbLib  SMTSO2020CTJ1_SMTSO2020CTJ.SCHLIB  SinglaAntenna.SchDoc  SingleAntenna.PcbDoc  SingleAntenna.PrjPcb  SingleAntenna.PrjPcbStructure
OpenOCD/board/: rpi5_lfe5u45f.cfg
OpenOCD/interface/: rpi5_ecp5_gpio.cfg
Services/: install.sh  kasmvnc.service  load-quadrf.service  quadrf-gui.service  soapysdr-server.service
SoapySDR/: CMakeLists.txt  Farrow.hpp  MipiDevice.cpp  MipiDevice.hpp  NEON.cpp  Registration.cpp
arm_QEC/8_16_master_slave_0/: .cproject  .mxproject  8_16_master_slave_0 Debug.launch  8_16_master_slave_0.ioc  STM32G431KBUX_FLASH.ld
basic_transfer_0/: .cproject  .project  basic_transfer_0 Debug.launch  basic_transfer_0.ioc
basic_transfer_0/Debug/: basic_transfer_0.elf  basic_transfer_0.list  basic_transfer_0.map  makefile  objects.list
teensy/: captures.ino  main.ino  qec.ino  spsa.ino
teensy/matlab/: plot_sdm_capture8x.m
(+141 files in other folders)
